Added more index for the present day

--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
             <div class="d-grid gap-2 col-12 mx-auto">Places you've been!<div id="pastCities"></div>
             </div>
             </div>
+    <div class="card col-9 mt-4 border-1">
+        <div class="card body">
+            <h3 class="card-title d-flex align-items fw-bold mx-2 fs-1">
+            <span id="yourCity"></span>
+            <span class="px-5" id="presentDay"></span>
+            </h3>
+            <p class="card-text mx-2 fs-2">
+            Temperature:
+            <span id="tempNow"></span>
+            </p>
+            <p class="card-text mx-2 fs-2">
+            Wind Speed:
+            <span id="windNow"></span>
+            </p>
+            <p class="card-text mx-2 fs-2">
+            Humidity:
+            <span id="humdNow"></span>
+            </p>    
+        </div>
+    <section>
+        
+    </section>
+    </div>
         </section>
     </div>
 </main>
