Finished with my day outline to display

--- a/index.html
+++ b/index.html
@@ -48,6 +48,25 @@
             </p>    
         </div>
     <section>
+        <h4 class="card-title d-flex align-items-center fw-bold mx-2">
+            5-Day Weather
+        </h4>
+        <div class="row justify-content-between mx-2">
+            <div class="col-md-2 card card bg-dark text-white"></div>
+            <p class="card-title fw-bold" id="day1"></p>
+            <p class="card-text mx-2">
+            Temperature:
+            <span id="tempDay1"></span>
+            </p>
+            <p class="card-text mx-2">
+            Wind:
+            <span id="windDay1"></span>
+            </p>
+            <p class="card-text mx-2">
+            Humidity:
+            <span id="humdDay1"></span>
+            </p>
+        </div>
         
     </section>
     </div>
