renamed js and added the remaining days outline

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             5-Day Weather
         </h4>
         <div class="row justify-content-between mx-2">
-            <div class="col-md-2 card card bg-dark text-white"></div>
+            <div class="col-md-2 card card bg-warning text-white"></div>
             <p class="card-title fw-bold" id="day1"></p>
             <p class="card-text mx-2">
             Temperature:
@@ -67,12 +67,77 @@
             <span id="humdDay1"></span>
             </p>
         </div>
-        
+        <div class="row justify-content-between mx-2">
+            <div class="col-md-2 card card bg-warning text-white"></div>
+            <p class="card-title fw-bold" id="day2"></p>
+            <p class="card-text mx-2">
+            Temperature:
+            <span id="tempDay2"></span>
+            </p>
+            <p class="card-text mx-2">
+            Wind:
+            <span id="windDay2"></span>
+            </p>
+            <p class="card-text mx-2">
+            Humidity:
+            <span id="humdDay2"></span>
+            </p>
+        </div>
+        <div class="row justify-content-between mx-2">
+            <div class="col-md-2 card card bg-warning text-white"></div>
+            <p class="card-title fw-bold" id="day3"></p>
+            <p class="card-text mx-2">
+            Temperature:
+            <span id="tempDay3"></span>
+            </p>
+            <p class="card-text mx-2">
+            Wind:
+            <span id="windDay3"></span>
+            </p>
+            <p class="card-text mx-2">
+            Humidity:
+            <span id="humdDay3"></span>
+            </p>
+        </div>
+        <div class="row justify-content-between mx-2">
+            <div class="col-md-2 card card bg-warning text-white"></div>
+            <p class="card-title fw-bold" id="day4"></p>
+            <p class="card-text mx-2">
+            Temperature:
+            <span id="tempDay4"></span>
+            </p>
+            <p class="card-text mx-2">
+            Wind:
+            <span id="windDay4"></span>
+            </p>
+            <p class="card-text mx-2">
+            Humidity:
+            <span id="humdDay4"></span>
+            </p>
+        </div>
+        <div class="row justify-content-between mx-2">
+            <div class="col-md-2 card card bg-warning text-white"></div>
+            <p class="card-title fw-bold" id="day5"></p>
+            <p class="card-text mx-2">
+            Temperature:
+            <span id="tempDay5"></span>
+            </p>
+            <p class="card-text mx-2">
+            Wind:
+            <span id="windDay5"></span>
+            </p>
+            <p class="card-text mx-2">
+            Humidity:
+            <span id="humdDay5"></span>
+            </p>
+        </div>
     </section>
     </div>
         </section>
     </div>
+
 </main>
+    <script src="./script.js"></script>
 <body>
     
 
