Fixed typos, added js file, fetch api works

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="text" class="form-control" id="lookUpCity" placeholder="Get out there!" aria-label="City">
             </div>
             <div class="d-grid gap-2 col-12 mx-auto">
-                <button type="button" class="btn text-white btn-dark" id="btn">Go!</button>
+                <button type="button" class="btn text-white btn-dark" id="btnS">Go!</button>
             </div>
             <div class="d-grid gap-2 col-12 mx-auto">Places you've been!<div id="pastCities"></div>
             </div>
@@ -44,7 +44,7 @@
             </p>
             <p class="card-text mx-2 fs-2">
             Humidity:
-            <span id="humdNow"></span>
+            <span id="humidNow"></span>
             </p>    
         </div>
     <section>
@@ -138,6 +138,8 @@
 
 </main>
     <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src ="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <body>
     
 
