--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5 Day</title>
+    <!-- Link for bootsramp for styling and page layout -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS.css"/>
 </head>
 </head>
 <header class="hero">
@@ -17,6 +17,7 @@
         <section class ="row">
             <div class ="col-3">
                 <h2>
+                    <!-- Search for a city,results will be displayed below -->
                     Search for a city:
                 </h2>
             <div class="input-group mb-3">
@@ -48,6 +49,7 @@
             </p>    
         </div>
     <section>
+        <!-- Still working on getting functionality on the next 5 day forcast in progress -->
         <h4 class="card-title d-flex align-items-center fw-bold mx-2">
             5-Day Weather
         </h4>
@@ -138,6 +140,7 @@
 
 </main>
     <script src="./script.js"></script>
+    <!-- Script for Dayjs for the current date to be displayed -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src ="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <body>
